Spacing fix 2

--- a/css/main.css
+++ b/css/main.css
@@ -75,7 +75,7 @@ html {
   color: white;
   font-weight: bold;
   margin-bottom: 0.5em;
-  margin-top: 0.5em;
+  margin-top: 1em;
 }
 
 #bingo ul {
